# taller-matrices

./: .cproject  .project  CMakeLists.txt  main.cpp
Debug/: makefile  sources.mk
Debug/gtest/: subdir.mk
Debug/lib/gtest/: subdir.mk
Debug/src/: subdir.mk
Debug/test/: subdir.mk
archivos/in/: cantidadAparicionesDePalabra.in  pocosNumerosRandom.in
archivos/sol/: cantidadAparicionesVectorChico.sol  cantidadAparicionesVectorGrande.sol  ordenarSecuenciasPocosNumeros.sol  promedioMuchosNumerosRandom.sol
src/: ejercicios.cpp
test/: Ej1TEST.cpp  Ej2TEST.cpp  Ej3TEST.cpp  Ej4TEST.cpp  Ej5TEST.cpp
